--- a/lib/assets/index.html
+++ b/lib/assets/index.html
@@ -22,9 +22,10 @@
     </ul>
   </script>
 
-  <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/handlebars-1.0.0.js"></script>
-  <script src="js/libs/ember-1.1.2.js"></script>
+  <script src="js/libs/jquery.js"></script>
+  <script src="js/libs/handlebars.js"></script>
+  <script src="js/libs/emblem.js"></script>
+  <script src="js/libs/ember.js"></script>
   <script src="js/app.js"></script>
 
 </body>
